figure and image: avoid break inside, but does not seem to work

--- a/relearn/static/less/print.less
+++ b/relearn/static/less/print.less
@@ -371,7 +371,8 @@ h1, h2, h3, h4, h5, h6 {
 /* AN EXAMPLE TO AVOID PAGE BREAK INSIDE, 
  * HERE NO PARAGRAPH WILL BE CUT, 
  * BUT YOU MIGHT WANT TO DEACTIVATE THIS */
-p {
-    /*-webkit-region-break-inside: avoid;*/
+figure, 
+img {
+    -webkit-region-break-inside: avoid;
 }
 
